# datacrawler-hub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
APP/: main.py
APP/core/: config.py
app/: main.py
app/api/: articles.py  metrics.py  routes.py  scrape.py
app/core/: config.py  logging.py  scheduler.py
app/db/: models.py  session.py
app/repositories/: article_repo.py
app/schemas/: article.py
app/scrapers/: __init__.py  base.py  g1_scraper.py  hackernews_scraper.py  stub_scraper.py
app/services/: article_service.py
